# rust_chat

./: Cargo.toml  README.md
frontend/: package-lock.json  package.json  preact.config.js
frontend/src/: ServerCon.js  chat.js  chatList.js  chess.js  chessClear.js  chessSelect.js  index.js  login.js  style.css  template.html  tools.js
src/: main.rs  structs.rs  tools.rs
