[package]
name = "rust_chat"
version = "0.1.0"
authors = ["pegasis <admin@pegasis.site>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
env_logger = "0.7"
log = "0.4"
tokio-tungstenite = "0.11.0"
futures = "0.3.5"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
serde_json = "1.0.57"
serde = { version = "1.0.115", features = ["derive"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
reqwest = "0.10.8"
